--- a/harbour/docker-compose.yml
+++ b/harbour/docker-compose.yml
@@ -1,10 +1,14 @@
 services:
   app:
     build: ..\examples\01\app\Dockerfile
-    restart: no
+    restart: always
+    networks:
+    - bridge
   database:
     build: ..\examples\01\database\Dockerfile
-    restart: no
+    restart: always
+    networks:
+    - bridge
 networks:
-  test:
+  bridge:
     driver: bridge
