--- a/harbour/Cargo.toml
+++ b/harbour/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.32", features = ["derive"] }
+colored = "3.0.0"
 env_logger = "0.11.7"
 log = "0.4.26"
 serde = { version = "1.0.219", features = ["derive"] }
