--- a/harbour/Cargo.toml
+++ b/harbour/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.40"
 clap = { version = "4.5.32", features = ["derive"] }
 colored = "3.0.0"
 env_logger = "0.11.7"
+itertools = "0.14.0"
 log = "0.4.26"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_yaml = "0.9.34"
